# bropl

./: .env.example  .gitignore  FIXES_SUMMARY.md  README.md  WEBSOCKET_ORDER_TRACKING.md  pyproject.toml
src/kucoin_bot/: __init__.py  config.py  main.py
src/kucoin_bot/api/: __init__.py  client.py  websocket.py
src/kucoin_bot/execution/: engine.py
src/kucoin_bot/indicators/: technical.py
src/kucoin_bot/models/: data_models.py
src/kucoin_bot/pair_selector/: __init__.py  selector.py
src/kucoin_bot/persistence/: __init__.py  state_manager.py
src/kucoin_bot/risk_management/: manager.py
src/kucoin_bot/strategies/: base.py
src/kucoin_bot/utils/: logging.py  metrics.py
tests/: __init__.py  test_config.py  test_indicators.py  test_models.py  test_pair_selector.py  test_persistence.py  test_risk_management.py  test_strategies.py  test_websocket_order_tracking.py  validate_fixes.py
